delete post article

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -3,10 +3,10 @@
     {% when 'disqus' %}
       {% if site.disqus_username %}
         {% assign load_disqus = true %}
-        <!-- Disqus Protection, see https://github.com/mzlogin/mzlogin.github.io/issues/2 -->
-        {% if site.disqus_username == 'mzlogin' %}
+        <!-- Disqus Protection, see https://github.com/qihouying/qihouying.github.io/issues/2 -->
+        {% if site.disqus_username == 'qihouying' %}
           {% assign load_disqus = false %}
-          {% if site.url contains 'mazhuang.org' %}
+          {% if site.url contains 'qihouying.github.io' %}
             {% assign load_disqus = true %}
           {% endif %}
         {% endif %}
